feat: add llmos-gpu-stack chart & docker image build

--- a/charts/llmos-gpu-stack-crd/templates/gpustack.llmos.ai_gpudevices.yaml
+++ b/charts/llmos-gpu-stack-crd/templates/gpustack.llmos.ai_gpudevices.yaml
@@ -11,14 +11,12 @@ spec:
     kind: GPUDevice
     listKind: GPUDeviceList
     plural: gpudevices
-    shortNames:
-    - gpu
     singular: gpudevice
   scope: Cluster
   versions:
   - additionalPrinterColumns:
     - jsonPath: .status.nodeName
-      name: NODE NAME
+      name: NODE_NAME
       type: string
     - jsonPath: .status.vendor
       name: VENDOR
