--- a/charts/llmos-gpu-stack/Chart.yaml
+++ b/charts/llmos-gpu-stack/Chart.yaml
@@ -22,6 +22,8 @@ version: 0.1.0-dev
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "0.1.0-app.dev"
+maintainers:
+  - name: llmos-ai
 dependencies:
   - name: gpu-operator
     condition: gpuOperator.enabled
