--- a/scripts/chart/build
+++ b/scripts/chart/build
@@ -1,16 +1,16 @@
 #!/usr/bin/env bash
 set -e
 
-echo "--- Starting the build process for llmos-operator charts ---"
+echo "--- Starting the build process for llmos-gpu-stack charts ---"
 
 TOP_DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )/../.." &> /dev/null && pwd )"
-LLMOS_CHARTS_DIR=${LLMOS_CHARTS_DIR:-deploy/charts}
+LLMOS_CHARTS_DIR=${LLMOS_CHARTS_DIR:-charts}
 CHART_REPO=${CHART_REPO:-dev}
 
 cd "${TOP_DIR}"
 . ./scripts/version
 
-CHART_DIST_DIR=${CHART_DIST_DIR:-dist/llmos-charts}
+CHART_DIST_DIR=${CHART_DIST_DIR:-dist/charts}
 ## create dist dir if not exist
 if [ ! -d "${CHART_DIST_DIR}" ]; then
   mkdir -p "dist"
@@ -38,12 +38,8 @@ function updateImageConfig() {
           else
             .
           end |
-          if has("repository") and .repository == "ghcr.io/llmos-ai/llmos-operator"  then
-            .repository = $registry + "/llmos-operator"
-          elif has("repository") and .repository == "ghcr.io/llmos-ai/llmos-operator-webhook"  then
-            .repository = $registry + "/llmos-operator-webhook"
-          elif has("repository") and .repository == "ghcr.io/llmos-ai/system-charts-repo"  then
-            .repository = $registry + "/system-charts-repo"
+          if has("repository") and .repository == "ghcr.io/llmos-ai/llmos-gpu-stack"  then
+            .repository = $registry + "/llmos-gpu-stack"
           else
             .
           end |
@@ -63,39 +59,41 @@ function updateImageConfig() {
 }
 
 function patchChartVersion() {
-    sed -i -e "s/0.1.0-dev/${CHART_VERSION}/g" "${llmos_crd_chart_path}/Chart.yaml"
-    sed -i -e "s/0.1.0-app.dev/${APP_VERSION}/g" "${llmos_crd_chart_path}/Chart.yaml"
-    sed -i -e "s/0.1.0-dev/${CHART_VERSION}/g" "${llmos_operator_chart_path}/Chart.yaml"
-    sed -i -e "s/0.1.0-app.dev/${APP_VERSION}/g" "${llmos_operator_chart_path}/Chart.yaml"
+    sed -i -e "s/0.1.0-dev/${CHART_VERSION}/g" "${gpu_stack_crd_chart_path}/Chart.yaml"
+    sed -i -e "s/0.1.0-app.dev/${APP_VERSION}/g" "${gpu_stack_crd_chart_path}/Chart.yaml"
+    sed -i -e "s/0.1.0-dev/${CHART_VERSION}/g" "${gpu_stack_chart_path}/Chart.yaml"
+    sed -i -e "s/0.1.0-app.dev/${APP_VERSION}/g" "${gpu_stack_chart_path}/Chart.yaml"
 
-    rm -f "${llmos_crd_chart_path}/Chart.yaml-e"
-    rm -f "${llmos_operator_chart_path}/Chart.yaml-e"
+    rm -f "${gpu_stack_crd_chart_path}/Chart.yaml-e"
+    rm -f "${gpu_stack_chart_path}/Chart.yaml-e"
 }
 
-# package llmos-operator chart
-llmos_crd_chart_path=${CHART_DIST_DIR}/llmos-crd
-llmos_operator_chart_path=${CHART_DIST_DIR}/llmos-operator
+# package llmos-gpu-stack chart
+gpu_stack_crd_chart_path=${CHART_DIST_DIR}/llmos-gpu-stack-crd
+gpu_stack_chart_path=${CHART_DIST_DIR}/llmos-gpu-stack
 
 
 patchChartVersion
-updateImageConfig "${llmos_operator_chart_path}"
+updateImageConfig "${gpu_stack_chart_path}"
 cd "${TOP_DIR}"
 
 ./scripts/chart/check "${LLMOS_CHARTS_DIR}"
 
-helm lint "${llmos_crd_chart_path}"
-helm lint "${llmos_operator_chart_path}"
+helm lint "${gpu_stack_crd_chart_path}"
+helm lint "${gpu_stack_chart_path}"
 
-helm package ${llmos_crd_chart_path} -d ${CHART_DIST_DIR} || true
-helm package ${llmos_operator_chart_path} -d ${CHART_DIST_DIR} || true
+helm package ${gpu_stack_crd_chart_path} -d ${CHART_DIST_DIR} || true
+helm package ${gpu_stack_chart_path} -d ${CHART_DIST_DIR} || true
 
-echo "Building new helm chart ${CHART_REPO} repo index:"
-curl -H "Cache-Control: no-cache" -fL "https://releases.1block.ai/charts/${CHART_REPO}/index.yaml" -o "${CHART_DIST_DIR}"/index.yaml
+#echo "Building new helm chart ${CHART_REPO} repo index:"
+#curl -H "Cache-Control: no-cache" -fL "https://releases.1block.ai/gpu-stack-charts/${CHART_REPO}/index.yaml" -o "${CHART_DIST_DIR}"/index.yaml
 
-helm repo index --merge "${CHART_DIST_DIR}"/index.yaml ${CHART_DIST_DIR} || true
+#helm repo index --merge "${CHART_DIST_DIR}"/index.yaml ${CHART_DIST_DIR} || true
 
 # Clean up the build
-rm -rf ${llmos_crd_chart_path} ${llmos_operator_chart_path}
-rm -rf ${CHART_DIST_DIR}/system-charts
+if [[ "$CLEAN_UP_CHARTS" == "true" ]]; then
+  rm -rf "${gpu_stack_crd_chart_path}" "${gpu_stack_chart_path}"
+  rm -rf "${CHART_DIST_DIR}/system-charts"
+fi
 
-echo "Build llmos-operator charts completed successfully."
+echo "Build llmos-gpu-stack charts completed successfully."
