fix: disable gpu-operator device plugin

--- a/charts/llmos-gpu-stack/values.yaml
+++ b/charts/llmos-gpu-stack/values.yaml
@@ -87,6 +87,8 @@ gpuOperator:
 gpu-operator:
   driver:
     enabled: false
+  devicePlugin:
+    enabled: false
   toolkit:
     env:
       - name: CONTAINERD_CONFIG
