--- a/.github/workflows/main-release.yaml
+++ b/.github/workflows/main-release.yaml
@@ -82,10 +82,9 @@ jobs:
           helm repo add nvidia https://helm.ngc.nvidia.com/nvidia
           helm repo add hami https://project-hami.github.io/HAMi
           helm repo add volcano https://volcano-sh.github.io/helm-charts
-          ct lint --target-branch ${{ github.event.repository.default_branch }} --charts dist/charts/llmos-gpu-stack,dist/charts/llmos-gpu-stack-crd
+          ct lint --target-branch ${{ github.event.repository.default_branch }} --charts dist/charts/llmos-gpu-stack
       - name: Create kind cluster
         uses: helm/kind-action@v1.10.0
       - name: Run chart-testing (install)
         run: |
-          ct install --target-branch ${{ github.event.repository.default_branch }} --charts dist/charts/llmos-gpu-stack-crd --skip-clean-up
           ct install --target-branch ${{ github.event.repository.default_branch }} --charts dist/charts/llmos-gpu-stack  --helm-dependency-extra-args "--skip-refresh"
