fix: set init gpu node labels

--- a/charts/llmos-gpu-stack/values.yaml
+++ b/charts/llmos-gpu-stack/values.yaml
@@ -117,8 +117,7 @@ hami:
       gpuSchedulerPolicy: spread
     kubeScheduler:
       enabled: true
-      image: k8s.gcr.io/kube-scheduler
-      imageTag: "v1.30.5"
+      image: registry.cn-hangzhou.aliyuncs.com/google_containers/kube-scheduler
       imagePullPolicy: IfNotPresent
   devicePlugin:
     runtimeClassName: "nvidia"
