--- a/charts/llmos-gpu-stack/templates/device-manager/serviceaccount.yaml
+++ b/charts/llmos-gpu-stack/templates/device-manager/serviceaccount.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "llmos-gpu-stack.serviceAccountName" . }}
+  name: {{ include "device-manager.fullname" . }}
   labels:
     {{- include "llmos-gpu-stack.labels" . | nindent 4 }}
   {{- with .Values.gpuStack.serviceAccount.annotations }}
