--- a/.github/workflows/main-release.yaml
+++ b/.github/workflows/main-release.yaml
@@ -80,7 +80,7 @@ jobs:
       - name: Run chart-testing (lint)
         run: |
           helm repo add nvidia https://helm.ngc.nvidia.com/nvidia
-          helm repo add hami https://project-hami.github.io/HAMi
+          helm repo add volcano https://volcano-sh.github.io/helm-charts
           ct lint --target-branch ${{ github.event.repository.default_branch }} --charts dist/charts/llmos-gpu-stack
       - name: Create kind cluster
         uses: helm/kind-action@v1.10.0
