--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -56,5 +56,5 @@ jobs:
     - name: Run chart-testing (lint)
       run: |
         helm repo add nvidia https://helm.ngc.nvidia.com/nvidia
-        helm repo add hami https://project-hami.github.io/HAMi
+        helm repo add volcano https://volcano-sh.github.io/helm-charts
         ct lint --target-branch ${{ github.event.repository.default_branch }} --charts dist/charts/llmos-gpu-stack
