--- a/charts/llmos-gpu-stack/templates/device-manager/deployment.yaml
+++ b/charts/llmos-gpu-stack/templates/device-manager/deployment.yaml
@@ -32,7 +32,7 @@ spec:
         - name: "device-manager"
           securityContext:
             {{- toYaml .Values.gpuStack.deviceManager.securityContext | nindent 12 }}
-          image: "{{ .Values.gpuStack.deviceManager.image.repository }}:{{ .Values.gpuStack.deviceManager.image.tag | default .Chart.AppVersion }}"
+          image: {{ printf "%s%s:%s" (include "globalRegistry" .) .Values.gpuStack.deviceManager.image.repository .Values.gpuStack.deviceManager.image.tag }}
           imagePullPolicy: {{ .Values.gpuStack.deviceManager.image.pullPolicy }}
           ports:
             - name: http
