--- a/charts/llmos-gpu-stack/templates/nvidia-device-plugin/rbac.yaml
+++ b/charts/llmos-gpu-stack/templates/nvidia-device-plugin/rbac.yaml
@@ -33,6 +33,9 @@ rules:
   - apiGroups: [""]
     resources: ["pods"]
     verbs: ["get", "list", "update", "patch", "watch"]
+  - apiGroups: [ "" ]
+    resources: [ "configmaps" ]
+    verbs: [ "get", "list", "watch", "create", "update" ]
 ---
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
